<resources>
    <string name="app_name">MilkTeaAppAndroid</string>
    <string name="hint">Tìm kiếm sản phẩm</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dangki">Đăng kí</string>
    <string name="quenmatkhau">Quên mật khẩu?</string>
    <string name="hoten">Họ tên</string>
    <string name="diachi">Địa chỉ</string>
    <string name="sodt">Số điện thoại</string>
    <string name="nhaplaimk">Nhập lại mật khẩu</string>
    <string name="giohang">Giỏ hàng</string>
    <string name="giohangdangtrong">Giỏ hàng của bạn đang trống.</string>
    <string name="tongtien">500.000 vnđ</string>

    <string name="thongbaotendangki">Bạn chưa nhập họ tên</string>
    <string name="thongbaosdtdangki">Bạn vui lòng kiểm tra lại số điện thoại!</string>
    <string name="thongbaodiachidangki">Bạn vui lòng kiểm tra lại địa chỉ!</string>
    <string name="thongbaoemail">Bạn vui lòng kiểm tra lại email!</string>
    <string name="thongbaomatkhau">Mật khẩu phải lớn hơn 6 ký tự!</string>
    <string name="thongbaonhaplaimk">Mật khẩu phải giống mật khẩu ở trên.</string>
    <string name="thongbaodangkithanhcong">Đăng kí thành công! Đăng nhập để tiếp tục.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
