<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dangki"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/dangki"
            android:textSize="36dp"
            app:fontFamily="@font/petit_formal_script" />

        <EditText
            android:id="@+id/ed_HoTen_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/theme"
            android:drawableLeft="@drawable/user_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hoten"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/origento"
            android:textColorHighlight="@color/theme"
            android:textColorLink="@color/origento" />

        <EditText
            android:id="@+id/ed_SDT_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/theme"

            android:drawableLeft="@drawable/phone_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/sodt"
            android:inputType="phone"
            android:textColorHighlight="@color/theme" />

        <EditText
            android:id="@+id/ed_DiaChi_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/theme"

            android:drawableLeft="@drawable/diachi_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/diachi"
            android:inputType="textPersonName"
            android:text=""
            android:textColorHighlight="@color/theme" />

        <EditText
            android:id="@+id/ed_Email_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/theme"

            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:text=""
            android:textColorHighlight="@color/theme" />

        <EditText
            android:id="@+id/ed_MatKhau_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/theme"

            android:drawableLeft="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHighlight="@color/theme" />

        <EditText
            android:id="@+id/ed_NhapLaiPass_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/theme"
            android:drawableLeft="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/nhaplaimk"
            android:inputType="textPassword"
            android:textColorHighlight="@color/theme" />

        <Button
            android:id="@+id/btn_DangKi"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"


            android:layout_marginRight="40dp"

            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/theme"
            android:ems="10"
            android:text="@string/dangki"
            android:textColor="@color/backgroud"
            android:textColorHighlight="@color/theme"
            android:textSize="24sp" />

    </LinearLayout>
</RelativeLayout>